--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <b>Aoba!</b> Seja bem-vindo(a) ao meu site! Me chamo Sayran, mais conhecido como Polar, atualmente tenho 13 anos e sou desenvolvedor de projetos como Bots, Sites, entre outros...<br><br>
       
       Atualmente possuo experiência em <b><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="hl">JavaScript</a>, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" class="hl">HTML</a> e <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" class="hl">CSS</a></b>
+    
+      <br><a href="html/pages/botsrec.html">Bots recomendados</a>
     </p>
   </body>
 </html>
