--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awasome/4.7.0/css/font-awasome.min.css">
-    <title>ðŸŽ“ Sayran Portfolio's</title>
+    <title>🎓 Sayran Portfolio's</title>
   </head>
   <body>
     <h1>
@@ -17,7 +17,7 @@
       
       Atualmente possuo experiência em <b><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="hl">JavaScript</a>, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" class="hl">HTML</a> e <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" class="hl">CSS</a></b>
     
-      <br><a href="botsrec.html">Bots recomendados</a>
+      <br><a href="pages/botsrec.html">Bots recomendados</a>
     </p>
   </body>
 </html>
