Update and rename html/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       Atualmente possuo experiência em <b><a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="hl">JavaScript</a>, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" class="hl">HTML</a> e <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" class="hl">CSS</a></b>
     
-      <br><a href="pages/botsrec.html">Bots recomendados</a>
+      <br><a href="botsrec.html">Bots recomendados</a>
     </p>
   </body>
 </html>
