--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>
       Sayran "Polaar" Felix
     </h1>
+    <p class="links"><span class="sobre">Sobre</span></p>
     <center><img class="image1" src="https://media.discordapp.net/attachments/876767375377178654/893435858273845248/programmer.png"></center>
     <p>
       <b>Aoba!</b> Seja bem-vindo(a) ao meu site! Me chamo Sayran, mais conhecido como Polar, atualmente tenho 13 anos e sou desenvolvedor de projetos como Bots, Sites, entre outros...<br><br>
