--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>
       <b>Aoba!</b> Seja bem-vindo(a) ao meu site! Me chamo Sayran, mais conhecido como Polar, atualmente tenho 13 anos e sou desenvolvedor de projetos como Bots, Sites, entre outros...<br><br>
       
-      Atualmente possuo experiência nas linguagens: <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="hl">JavaScript</a>, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" class="hl">HTML</a> e <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" class="hl">CSS</a>, aliás, este site está sendo feito em HTML e CSS, com um objetivo de servir como um portfólio com informações e curiosidades sobre mim.
+      Atualmente possuo experiência em <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="hl">JavaScript</a>, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" class="hl">HTML</a> e <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" class="hl">CSS</a>, aliás, este site está sendo feito utilizando HTML e CSS, com um objetivo de servir como um portfólio com informações e curiosidades sobre mim.
     </p>
   </body>
 </html>
