--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
       Atualmente possuo experiência em <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" class="hl">JavaScript</a>, <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" class="hl">HTML</a> e <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" class="hl">CSS</a>, aliás, este site está sendo feito utilizando HTML e CSS, com um objetivo de servir como um portfólio com informações e curiosidades sobre mim.<br><br>
    
-      Iniciei no ramo da programação e criação de projetos, criando um simples Bot para o Discord chamado Kaidoo, feito em JavaScript utilizando-se do pacote discord.js, infelizmente o Bot não foi um projeto muito grande e sério (até porque eu estava começando na programação), então ele foi abandonado e esquecido, mas depois disso me apaixonei em programação e hoje em dia busco expandir meu conhecimento, atualmente só possuo conhecimento em JavaScript, HTML e CSS, como foi citado à cima, mas pretendo aprender sobre Python, TypeScript, entre outros...
+      Iniciei no ramo da programação e criação de projetos, criando um simples Bot para o Discord chamado Kaidoo, feito em JavaScript utilizando-se do pacote discord.js, infelizmente o Bot não foi um projeto muito grande e sério (até porque eu estava começando neste ramo), então ele foi abandonado e esquecido, mas depois disso me apaixonei em programação e hoje em dia busco expandir meu conhecimento, atualmente só possuo conhecimento em JavaScript, HTML e CSS, como foi citado no parágrafo à cima, mas pretendo aprender sobre Python, TypeScript, entre outros...
     </p>
   </body>
 </html>
