--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </h1>
     
     <div class="links">
-     <p>Sobre</p>
+     <p class="esp-links">Sobre</p>
      <p><a class="hl-links" href="skills.html">Habilidades</a></p>
     </div>
 
