--- a/skills.html
+++ b/skills.html
@@ -13,6 +13,9 @@
     <h1>
       Experiências & Habilidades
     </h1>
-    <p class="links"><small><a class="hl-links" href="index.html">Sobre</a>  •  Habilidades</small></p>
+   <div class="links">
+     <p class="esp-links"><a class="hl-links" href="index.html">Sobre</a></p>
+     <p>Habilidades</p>
+    </div>
   </body>
  </html>
