--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awasome/4.7.0/css/font-awasome.min.css">
-    <title>🎓 Sayran Portfolio's</title>
+    <title>🎓 Sayran Portfolio's - Skills</title>
   </head>
   <body>
    <br><br>
